css/index.css
::-webkit-scrollbar { 
	display: none; 
}

img, .entry, #icon_wrapper, #main_screen, #name {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

body, html, #menu, #main_screen {
	position: fixed;
	margin: 0;
	height: 100%;
	width: 100%;
	scrollbar-width: none;
	overflow-x: hidden;

	background-color: black;
	cursor: url('../cursors/white.cur'), auto;
}

html {
	font-family: "Charm";
	font-size: 62.5%;
}

#iframe_main { 
	float: left;
	width: 100%;
	height: 100%;
}

iframe {
	border: none;
}

#menu {
	position: absolute;

	width: 220px;

	background-color: black;
	overflow-y: auto;

	animation: opac 0.8s;
}

#main_screen {
	position: absolute;

	height: calc(100% - 40px);
	width: calc(100% - 220px - 20px);

	margin: 20px;
	margin-left: 220px;

	border-radius: 10px;
	box-shadow: inset 0px 0px 10px 0px white;

	background-image: url('../images/background.jpg');
	background-color: black;
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	z-index: 0;
	overflow-y: auto;
}

#profile_pic {
	width: 150px;
	height: 150px;

	margin-top: 8vh;
	margin-bottom: 1vh;
	margin-left: 30px;
	margin-right: 30px;

	border: 6px solid black;
	box-shadow: 0px 0px 10px 0px white;
	border-radius: 50%;

	transition: all box-shadow 300ms linear, visibility 0ms;
}

#profile_pic:hover {
	animation: cycle 2s infinite;
	animation-direction: alternate;
	cursor: url("../cursors/blue.cur"), auto;
	box-shadow: 0px 0px 23px 0px aqua;
}

#profile_pic:active {
	animation: cycle 2s infinite;
	animation-direction: alternate;
	cursor: url("../cursors/blue.cur"), auto;
	box-shadow: 0px 0px 30px 0px aqua;
}

#profile_pic:hover ~ #name {
	color: aqua;
	text-shadow: 0px 0px 20px aqua;
}

#profile_pic:active ~ #name {
	color: aqua;
	text-shadow: 0px 0px 20px red;
}

@keyframes cycle {
	0% { border-color: aqua; }
   	12.5% { border-right-color: aqua; }
	25% { border-top-color: aqua; }
	37.5% { border-left-color: aqua; }
	50% { border-bottom-color: aqua; }
   	62.5% { border-right-color: lightgreen; }
	75% { border-top-color: lightgreen; }
	87.5% { border-left-color: lightgreen; }
	99% { border-bottom-color: lightgreen ; }
	100% { border-color: aqua; }
}

#name {
	text-align: center;
	margin-bottom: 4vh;

	font-size: 3rem;
	color: white;
}

.entry {
	display: block;
	text-align: center;
	text-decoration: none;
	margin-left: 30px;
	margin-right: 30px;
	margin-bottom: 1vh;

	cursor: url("../cursors/blue.cur"), auto;

	font-size: 3rem;
	color: grey;
	transition: all 0.2s linear;
}

.entry:hover {
	color: aqua;
}

.entry:focus {
	color: aqua;
	font-size: 3.5rem;
	box-shadow: 0px 0px 15px 0px aqua;
	border-radius: 15px;
	border: 2px solid aqua;
	outline: none;
}

#icon_wrapper {
	position: absolute;
	bottom: 20px;
	
	height: 46px;
	width: 100%;

	text-align: center;
}

#icon_wrapper a {
	display: inline-block;

	border-radius: 50%;
	margin-left: 7px;
	margin-right: 7px;
	cursor: url("../cursors/blue.cur"), auto;

	height: 46px;
	width: 46px;
}

.icon {
	transition: box-shadow 0.2s linear;
	outline: none;
}

.icon img {
	border-radius: 50%;

	height: 40px;
	width: 40px;

	border: 3px solid black;
	box-shadow: 0px 0px 5px 0px white;
}

.icon img:hover, .icon:focus > img {
	height: 34px;
	width: 34px;

	border-style: double;
	border-color: aqua;
	border-width: 6px;
	box-shadow: 0px 0px 15px 0px aqua;
}

.nav {
	display: block;
	position: absolute;
	height: 100%;
	width: 100%;
}

@keyframes opac {
	from {
		opacity:0
	} 
	to {
		opacity:1
	}
}

@media screen and (orientation: portrait) {
	#main_screen {
		height: calc(100% - 30px);
		width: calc(100% - 30px);

		border-radius: 20px;

		margin: 15px;
		transition: 0.2s;
	}

	#menu {
		visibility: hidden;
		width: 100%;
		top: 0;
		display: inline;
	}

	#profile_pic {
		margin: auto;

		width: 135px;
		height: 135px;

		margin-top: 0px;
		margin-bottom: 2vh;
	}

	#profile_pic:hover ~ #name {
		color: aqua;
		text-shadow: 0px 0px 10px aqua;
	}

	#profile_pic:active ~ #name {
		color: aqua;
		text-shadow: 0px 0px 10px red;
	}

	#name {
		margin-bottom: 15px;
		font-size: 2.5rem;
		font-weight: 800;
	}

	.entry {
		margin-left: 38%;
		margin-right: 38%;
		font-size: 2.5rem;
	}

	.entry:focus {
		font-size: 2.8rem;
	}

	#icon_wrapper {
		position: absolute;
		left: 20px;
		bottom: 20px;

		height: 155px;
		width: 46px;
	}

	#icon_wrapper a {
		display: block;
		cursor: url("../cursors/white.cur"), auto;
		
		margin: 0;
		margin-top: 7px;

		height: 46px;
		width: 46px;
	}
}

/* Max Menu - Small Screen */
@media screen and (min-width: 1201px) and (max-height: 500px) and (orientation: landscape) {
	.nav {
		display: table;
	}

	#main_screen {
		height: calc(100% - 30px);
		width: calc(100% - 220px - 15px);
		margin-right: 15px;
		margin-top: 15px;
		margin-bottom: 15px;
	}

	#profile_pic {
		margin-left: 40px;
		margin-right: 40px;
		margin-top: 4vh;
		width: 130px;
		height: 130px;
		border-width: 5px;
	}

	#name {
		font-size: 2.4rem;
		margin-bottom: 3vh;
	}

	.entry {
		margin-bottom: 1vh;
		margin-right: 50px;
		margin-left: 50px;
		font-size: 2.2rem;
	}

	.entry:focus {
		font-size: 2.6rem;
	}

	#icon_wrapper {
		position: static;
		margin-top: 3vh;

		height: 42px;
	}

	#icon_wrapper a {
		height: 42px;
		width: 42px;
	}

	.icon img {
		height: 36px;
		width: 36px;

		border-style: solid;
		border-width: 3px;
	}

	.icon img:hover {
		height: 30px;
		width: 30px;

		border-style: double;
		border-color: aqua;
		border-width: 6px;
	}
}

/* Changing Menu Size */
@media screen and (min-width: 801px) and (max-width: 1200px) and (orientation: landscape) {
	#menu {
		width: 18vw;
	}

	#main_screen {
		width: calc(82% - 15px);
		height: calc(100% - 30px);

		margin: 15px;
		margin-left: 18vw;
	}

	#profile_pic {
		width: 12vw;
		height: 12vw;

		border-width: 0.5vw;
		margin-top: 9vh;
		margin-bottom: 1vh;
		margin-left: 2.5vw;
		margin-right: 2.5vw;
	}

	#name {
		font-size: 2.5rem;
		margin-bottom: 4vh;
	}

	.entry {
		margin-bottom: 1vh;
		font-size: 2.5rem;
	}

	.entry:focus {
		font-size: 2.7rem;
	}

	#icon_wrapper {
		bottom: 15px;
		height: 3.8vw;
	}

	#icon_wrapper a {
		margin-left: 0.7vw;
		margin-right: 0.7vw;

		height: 3.8vw;
		width: 3.8vw;
	}

	.icon img {
		height: 3.4vw;
		width: 3.4vw;

		border-width: 0.2vw;
	}

	.icon img:hover {
		height: 3vw;
		width: 3vw;

		border-color: aqua;
		border-width: 0.4vw;
	}
}

/* Changing Menu Size - Small Screen */
@media screen and (min-width: 801px) and (max-width: 1200px) and (max-height: 500px) and (orientation: landscape) {
	.nav {
		display: table;
	}

	#menu {
		width: 18vw;
	}

	#main_screen {
		width: calc(82vw - 12px);
		height: calc(100% - 24px);

		margin: 12px;
		margin-left: 18vw;
	}

	#profile_pic {
		width: 11vw;
		height: 11vw;

		margin-top: 4vh;
		margin-bottom: 2vh;
		margin-left: 3vw;
		margin-right: 3vw;
	}

	#name {
		font-size: 2rem;
		margin-bottom: 3vh;
	}

	.entry {
		margin-bottom: 0vh;
		font-size: 2rem;
	}

	.entry:focus {
		font-size: 2.5rem;
	}

	#icon_wrapper {
		position: static;
		margin-top: 4vh;

		height: 3.6vw;
	}

	#icon_wrapper a {
		height: 3.6vw;
		width: 3.6vw;
	}

	.icon img {
		height: 3.2vw;
		width: 3.2vw;

		border-width: 0.2vw;
	}

	.icon img:hover {
		height: 2.4vw;
		width: 2.4vw;

		border-color: aqua;
		border-width: 0.6vw;
	}
}

/* Min Menu */
@media screen and (max-width: 800px) and (orientation: landscape) {
	#menu {
		width: 140px;
	}

	#main_screen {
		width: calc(100% - 140px - 10px);
		height: calc(100% - 20px);

		margin: 10px;
		margin-left: 140px;
	}

	#profile_pic {
		width: 100px;
		height: 100px;

		border-width: 3px;
		margin-top: 14vh;
		margin-bottom: 2vh;
		margin-left: 17px;
		margin-right: 17px;
	}

	#name {
		font-size: 1.7rem;
		margin-bottom: 3vh;
	}

	.entry {
		margin-bottom: 0vh;
		font-size: 1.7rem;
	}

	.entry:focus {
		font-size: 2rem;
	}

	#icon_wrapper {
		margin-top: 6vh;

		bottom: 10px;

		height: 34px;
	}

	#icon_wrapper a{
		margin-left: 2px;
		margin-right: 2px;

		height: 34px;
		width: 34px;
	}

	.icon img {
		height: 30px;
		width: 30px;

		border-width: 2px;
	}

	.icon img:hover {
		height: 26px;
		width: 26px;

		border-color: aqua;
		border-width: 4px;
	}
}

/* Min Menu - Small Screen */
@media screen and (max-width: 800px) and (max-height: 340px) and (orientation: landscape) {
	.nav {
		display: table;
	}

	#menu {
		width: 140px;
	}

	#main_screen {
		width: calc(100% - 140px - 10px);
		height: calc(100% - 20px);

		margin: 10px;
		margin-left: 140px;
	}

	#profile_pic {
		width: 90px;
		height: 90px;
		margin-left: 19px;
		margin-right: 19px;
		margin-top: 4vh;
	}

	#name {
		font-size: 1.5rem;
		margin-bottom: 1.5vh;
	}

	.entry {
		margin-bottom: 0vh;
		font-size: 1.5rem;
	}

	.entry:focus {
		font-size: 1.6rem;
	}

	#icon_wrapper {
		position: static;
		margin-top: 2.5vh;

		height: 26px;
	}

	#icon_wrapper a {
		margin-left: 5px;
		margin-right: 5px;	

		height: 26px;
		width: 26px;	
	}

	.icon img {
		height: 22px;
		width: 22px;

		border-width: 2px;
	}

	.icon img:hover {
		height: 18px;
		width: 18px;

		border-color: aqua;
		border-width: 4px;
	}
}

